<resources>
    <string name="app_name">My Schedule</string>
    <string name="subject_name">Subject Name</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="add_subject">Add Subject</string>
    <string name="add_room">Classroom</string>
    <string name="title_activity_add_subject">AddSubjectActivity</string>
    <string name="title_activity_add_homework">AddHomeworkActivity</string>
    <string name="save">Save</string>
    <string name="now_studying">Now Studying</string>
    <string name="add_homework">Add Homework</string>
    <string name="select_subject">Select Subject</string>
    <string name="detail">Detail</string>
    <string name="due_date">Due Date</string>
    <string name="no_class">No classes today</string>
</resources>
