<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddHomeworkActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/add_homework"
                android:textColor="#FFF"
                android:gravity="center"
                android:textSize="20sp" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBar">


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_subject"
            android:id="@+id/select_subject">


            <AutoCompleteTextView
                android:id="@+id/auto_complete_text_view"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_height="70dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#FFFF"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="30dp"
            android:id="@+id/detail"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_below="@id/select_due_date"
            app:boxBackgroundColor="#FFF"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginLeft="16dp"
                android:overScrollMode="always"
                android:layout_marginRight="16dp"
                android:hint="@string/detail"
                android:inputType="textMultiLine"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:gravity="top"/>

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:id="@+id/select_due_date"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:layout_below="@id/select_subject"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dueDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                app:cornerRadius="25dp"
                android:layout_marginStart="16dp"
                android:text="@string/due_date" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_below="@id/detail"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveButton"
                android:layout_width="300dp"
                android:layout_height="75dp"
                android:layout_marginTop="50dp"
                android:text="@string/save"
                android:layout_centerHorizontal="true"
                app:cornerRadius="25dp" />

        </RelativeLayout>

    </RelativeLayout>


</RelativeLayout>