<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSubjectActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/add_subject"
                android:textColor="#FFF"
                android:gravity="center"
                android:textSize="20sp" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBar">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_marginTop="20dp"
            app:boxBackgroundColor="#FFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/subject_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/room_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_below="@id/name_text_input"
            app:boxBackgroundColor="#FFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/room_edit_text"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/add_room" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:id="@+id/select_time"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/room_text_input"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/start_time"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                app:cornerRadius="25dp"
                android:layout_marginStart="16dp"
                android:text="@string/start_time" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/end_time"
                android:layout_width="150dp"
                app:cornerRadius="25dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="16dp"
                android:text="@string/end_time" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:id="@+id/select_days"
            android:layout_below="@id/select_time">

            <com.google.android.material.button.MaterialButton
                android:layout_marginTop="20dp"
                android:layout_marginStart="16dp"
                android:id="@+id/sundayButton"
                android:layout_width="45dp"
                android:layout_height="50dp"
                app:cornerRadius="25dp"
                android:backgroundTint="#FAFAFA"
                android:textColor="#ff0000"
                android:text="อ" />

            <com.google.android.material.button.MaterialButton
                android:layout_marginTop="20dp"
                android:layout_marginStart="71dp"
                android:id="@+id/mondayButton"
                android:layout_width="45dp"
                android:layout_height="50dp"
                app:cornerRadius="25dp"
                android:backgroundTint="#FAFAFA"
                android:textColor="#000"
                android:text="จ" />

            <com.google.android.material.button.MaterialButton
                android:layout_marginTop="20dp"
                android:layout_marginStart="127dp"
                android:id="@+id/tuesdayButton"
                android:layout_width="45dp"
                android:layout_height="50dp"
                app:cornerRadius="25dp"
                android:backgroundTint="#FAFAFA"
                android:textColor="#000"
                android:text="อ" />

            <com.google.android.material.button.MaterialButton
                android:layout_marginTop="20dp"
                android:layout_marginStart="185dp"
                android:id="@+id/wednesdayButton"
                android:layout_width="45dp"
                android:layout_height="50dp"
                app:cornerRadius="25dp"
                android:backgroundTint="#FAFAFA"
                android:textColor="#000"
                android:text="พ" />

            <com.google.android.material.button.MaterialButton
                android:layout_marginTop="20dp"
                android:layout_marginStart="243dp"
                android:id="@+id/thursdayButton"
                android:layout_width="45dp"
                android:layout_height="50dp"
                app:cornerRadius="25dp"
                android:backgroundTint="#FAFAFA"
                android:textColor="#000"
                android:text="พ" />

            <com.google.android.material.button.MaterialButton
                android:layout_marginTop="20dp"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="69dp"
                android:id="@+id/fridayButton"
                android:layout_width="45dp"
                android:layout_height="50dp"
                app:cornerRadius="25dp"
                android:backgroundTint="#FAFAFA"
                android:textColor="#000"
                android:text="ศ" />

            <com.google.android.material.button.MaterialButton
                android:layout_marginTop="20dp"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="16dp"
                android:id="@+id/saturdayButton"
                android:layout_width="45dp"
                android:layout_height="50dp"
                app:cornerRadius="25dp"
                android:backgroundTint="#FAFAFA"
                android:textColor="#000"
                android:text="ส" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_below="@id/select_days"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveButton"
                android:layout_width="300dp"
                android:layout_height="75dp"
                android:layout_marginTop="50dp"
                android:text="@string/save"
                android:layout_centerHorizontal="true"
                app:cornerRadius="25dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="200dp"
                android:textSize="40sp"
                android:id="@+id/test"
                android:text="Hello"/>

        </RelativeLayout>

    </RelativeLayout>




</RelativeLayout>